--- a/chapter1.Rmd
+++ b/chapter1.Rmd
@@ -1,4 +1,4 @@
 
 # About the project
 
-*Write a short description about the course and add a link to your github repository here. This is an R markdown (.Rmd) file so you can use R markdown syntax. See the 'Useful links' page in the mooc area (chapter 1) for instructions.*
+* In this course I hope to learn more about the possibilities with open data and version control. I have used RStudio before but everything else is pretty much out of my comfort zone. Here we go :) My github repository is https://github.com/fripa/IODS-project.git. *
