chapter4 and index knitted

--- a/chapter4.Rmd
+++ b/chapter4.Rmd
@@ -5,7 +5,7 @@ date: "29 Nov 2017"
 output: html_document
 ---
 
-```{r s, include=FALSE}
+```{r setup 1, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 
 #libraries
